# docker-studies

./: README.md
devops-poc/: .gitignore  README.md  run-server.sh  run-tests.sh
devops-poc/app/: Dockerfile  Jenkinsfile  README.md  deployment.yaml  requirements.txt  service.yaml
devops-poc/helm/: README.md
devops-poc/infra/: .gitignore  .terraform.lock.hcl  README.md  destroy.sh  grafana-dash.json  kubeconfig-jenkins  (+3 more)
docker-basics/: README.md
helm-poc/: README.md
hpa-http-poc/: README.md
hpa-kafka-poc/: README.md
hpa-poc/: .gitignore  README.md
hpa-websockets-poc/: README.md
http-protocol-benchmark/: README.md  docker-compose.yml
http-protocol-benchmark/http-client/: Cargo.toml
http-protocol-benchmark/http-client/src/: benchmark.rs  http1.rs  http2.rs  http3.rs  main.rs
jenkins-poc/: Jenkinsfile  README.md
kafka-compose/: docker-compose.yml
mongo-compose/: docker-compose.yml
mysql-compose/: docker-compose.yml
network/: Bridge.md  README.md
opensearch-poc/: README.md  data-generator.py  docker-compose.yml
opentofu-poc/: .terraform.lock.hcl  README.md  main.tf
pgtap-poc/: Dockerfile  README.md  clean.sh  docker-compose.yml  tests.sh
poc-tracker/: CloudFront.md  EKS-Ingress.md  EKS.md  GlobalAccelerator.md  KeycloakAuthorizer.md  Kotlin-Jetpack.md  README.md  Route53.md  Route53AndGlobalAccelerator.md  Swift-SwiftUI.md  X-Ray.md
podman-compose-macos/: README.md
podman-mysql-partition-macos/: README.md  execute-mysql-container.sh
postgres-groupby-poc/: README.md  docker-compose.yml
ulimit-poc/: Dockerfile  README.md  start.sh
(+66 files in other folders)
