[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

quinn = { version = "0.10", default-features = false, features = ["rustls"] }
h3 = "0.0.3"
h3-quinn = "0.0.4"

rustls = "0.21"
http = "0.2"